--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Day #39 - Tradingview Api - Method #2 | AsmrProg</title>
+    <title>Tradingview Widget </title>
 </head>
 
 <body>
 
-    <!-- TradingView Widget BEGIN -->
     <div class="tradingview-widget-container">
         <div id="tradingview_33f92"></div>
         <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow"
@@ -49,7 +48,6 @@
             );
         </script>
     </div>
-    <!-- TradingView Widget END -->
 
 
 
